# AzureSDKForRust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _config.yml  _redirects
_includes/: footer.md
_includes/css/: base.css  main.css  skeleton.css
_posts/: 2015-01-01-intro.md  2015-01-05-why.md  2015-01-10-collaborate.md  2015-01-10-usage.md  2015-01-20-collaborate.md  2015-01-20-usage.md  2015-02-01-disclaimer.md
azure-sdk-storage-queue/: Cargo.toml
azure-sdk-storage-queue/examples/: list_queues.rs  put_message.rs
azure-sdk-storage-queue/src/: lib.rs  prelude.rs
azure_sdk_auth_aad/: Cargo.toml
azure_sdk_auth_aad/examples/: cli_credentials.rs  default_credentials.rs  environment_credentials.rs
azure_sdk_core/: Cargo.toml
azure_sdk_core/src/: headers.rs  lib.rs  parsing.rs  range.rs
azure_sdk_cosmos/: 2  Cargo.toml
azure_sdk_cosmos/examples/: attachments00.rs  collection.rs  create_delete_database.rs  database00.rs  database01.rs  database01.rs.bak  document00.rs  document00.rs.bak  document_entries00.rs  document_entries01.rs  key_ranges00.rs  list_collections.rs  permission00.rs  permission00.rs.bak  query_document00.rs.bak  readme.rs  readme.rs.bak  remove_all_documents.rs  stored_proc_01.rs  trigger_00.rs  user_defined_function_00.rs  warp.rs
azure_sdk_cosmos/src/: \  collection.rs  consistency_level.rs  database.rs  document.rs  errors.rs  from_headers.rs  headers.rs  indexing_directive.rs  lib.rs  permission.rs  prelude.rs  resource_quota.rs  to_json_vector.rs  traits.rs  trigger.rs  (+1 more)
azure_sdk_service_bus/: Cargo.toml
azure_sdk_storage_account/: Cargo.toml
azure_sdk_storage_blob/: Cargo.toml
azure_sdk_storage_core/: Cargo.toml
azure_sdk_storage_table/: Cargo.toml
examples/: blob00.rs  blob02.rs  container00.rs  container01.rs  container_and_blob.rs  put_append_blob00.rs  put_block_blob00.rs  put_page_blob00.rs  stream_blob00.rs
src/: lib.rs  main.rs  prelude.rs
tests/: append_blob.rs  blob.rs  container.rs  page_blob.rs  stream_blob00.rs
(+213 files in other folders)
