[package]
name = "azure_sdk_for_rust"
version = "0.1.2"
description = "Rust wrappers around Microsoft Azure REST APIs"
readme = "README.md"
authors = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/MindFlavor/AzureSDKForRust"

[[bin]]
name = "main"
doc = false

[dependencies]
chrono = "^0.2"
rust-crypto = "^0.2"
rustc-serialize = "^0.3"
RustyXML = "^0.1"
mime = "^0.1"
log = "0.3"
env_logger = "0.3"
uuid = "^0.1"

# clippy="*"

url = "0.5.2"

[dependencies.hyper]
version = "^0.7"
default-features = true
