[package]
name = "azure_sdk_for_rust"
version = "0.1.3"
description = "Rust wrappers around Microsoft Azure REST APIs"
readme = "README.md"
authors = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"

[[bin]]
name = "main"
doc = false

[dependencies]
chrono = "*"
rust-crypto = "*"
rustc-serialize = "*"
RustyXML = "*"
mime = "*"
log = "*"
env_logger = "*"
uuid = "*"
time = "*"
url = "*"

# clippy="*"

[dependencies.hyper]
version = "*"
default-features = true
